--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@solana/web3.js": "^1.66.2",
     "axios": "^1.1.3",
     "framer-motion": "^6",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.3.1",
-    "next-connect": "^0.13.0",
+    "next-connect": "^1.0.0-next.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "18.11.5",
     "@types/react": "18.0.22",
     "@types/react-dom": "18.0.7",
